--- a/bindings/c/tree-sitter-rf.pc.in
+++ b/bindings/c/tree-sitter-rf.pc.in
@@ -2,10 +2,10 @@ prefix=@PREFIX@
 libdir=@LIBDIR@
 includedir=@INCLUDEDIR@
 
-Name: tree-sitter-rf
-Description: Rf grammar for tree-sitter
+Name: tree-sitter-lart
+Description: Lart grammar for tree-sitter
 URL: @URL@
 Version: @VERSION@
 Requires: @REQUIRES@
-Libs: -L${libdir} @ADDITIONAL_LIBS@ -ltree-sitter-rf
+Libs: -L${libdir} @ADDITIONAL_LIBS@ -ltree-sitter-lart
 Cflags: -I${includedir}
